Button animation works correctly now

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,19 @@ html, body {
   font-family: 'Roboto', sans-serif;
 }
 
+.instructions {
+  height: 200px;
+  width: 400px;
+  text-align: center;
+  color:white;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -200px;
+  z-index: 1;
+}
+
 .loaders {
   overflow: hidden;
   width: 100%;
@@ -20,88 +33,9 @@ html, body {
   min-width: 100px;
 }
 
-/* circle loaders */
-
-.circle-loader-1 {
-  width: 100px;
-  min-width: 100px;
-  height: 100px;
-  min-height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-  border-radius: 50%;
-  border-top: 10px solid rgba(255, 255, 255, 0.2);
-  border-right: 10px solid rgba(255, 255, 255, 0.2);
-  border-bottom: 10px solid rgba(255, 255, 255, 0.2);
-  border-left: 10px solid rgba(255, 255, 255, 1);
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: circle-loader-spin 1s infinite linear;
-  animation: circle-loader-spin 1s infinite linear;
-}
-
-.circle-loader-2 {
-  width: 100px;
-  min-width: 100px;
-  height: 100px;
-  min-height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-  border-radius: 50%;
-  border-top: 10px solid rgba(255, 255, 255, 0);
-  border-right: 10px solid rgba(255, 255, 255, 1);
-  border-bottom: 10px solid rgba(255, 255, 255, 1);
-  border-left: 10px solid rgba(255, 255, 255, 1);
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: circle-loader-spin 1s infinite linear;
-  animation: circle-loader-spin 1s infinite linear;
-}
-
-@keyframes circle-loader-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-/* square loader */
-
-.square-loader {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-  width: 100px;
-  height: 100px;
-  background-color: #FFFFFF;
-  animation: rotate 1s infinite ease-in-out;
-}
-
-@keyframes rotate {
-  0% {
-    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(120px) rotateX(-180deg) rotateY(0deg);
-  }
-  100% {
-    transform: perspective(120px) rotateX(-180deg) rotateY(-180deg);
-  }
-}
 
 /* google styled loader */
+
 
 .google-loader {
   display: flex;
@@ -110,6 +44,7 @@ html, body {
   margin: auto;
   width: 100px;
   height: 100px;
+  z-index:2;
 }
 
 .google-loader-bar {
@@ -118,8 +53,8 @@ html, body {
   height: 50px;
   border-radius: 5px;
   margin: 2px;
-  animation: google-loading 1s ease-in-out infinite;
-  background-color: #FFFFFF;
+  animation:none;
+  background-color: red;
 }
 .google-loader-bar:nth-child(1) {
   animation-delay: 0;
@@ -144,4 +79,14 @@ html, body {
   40% {
     transform: scale(1);
   }
+}
+
+.start {
+  display: inline-block;
+  width: 5px;
+  height: 50px;
+  border-radius: 5px;
+  margin: 2px;
+  animation: google-loading 1s ease-in-out infinite;
+  background-color: green;
 }
