--- a/public/styles.css
+++ b/public/styles.css
@@ -90,3 +90,7 @@ html, body {
   animation: google-loading 1s ease-in-out infinite;
   background-color: green;
 }
+
+.recorder-error {
+  font-size: 50px;
+}
