--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -94,3 +94,12 @@ html, body {
 .recorder-error {
   font-size: 50px;
 }
+
+.result {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    flex-direction: column;
+}
